fix version issue